flex a nav y hero, ponele

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     </header>
 
 
-    <section class="hero">
-        <h2>!Hola! Soy</h2>
-        <h1>Elsa MLot</h1>
+    <section class="hero-padre">
+        <h2>¡Hola! Soy</h2>
+        <h1>Elsa Mlot</h1>
         <p>Desarrolladora, curiosa y fan de superar retos.</p>
-        <button>LO QUE HAGO</button>
-        <img src="" alt="">
+        <button class="button-color">LO QUE HAGO</button>
+        <img src="imagenes/ginger-cat-722.png" alt="">
     </section>
 
     <section class="conocimientos">
