--- a/index.html
+++ b/index.html
@@ -6,36 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porfolio Elsa MLot</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
+
 </head>
 
 <body>
     <header>
-        <div class="hamburguesa-oculta"></div>
-        <nav>
+        <nav class="menu-oculto">
             <ul class="menu-desktop">
-                <li>HOLA</li>
-                <li>CONOCIMIENTOS</li>
-                <li>PROYECTOS</li>
-                <li>CONTACTO</li>
+                <li>
+                    <a href="#hola">HOLA</a>
+                </li>
+                <li>
+                    <a href="#mis-conocimientos">CONOCIMIENTOS</a>
+                </li>
+                <li>
+                    <a href="#mis-proyectos">PROYECTOS</a>
+                </li>
+                <li class="boton-contacto">CONTACTO</li>
             </ul>
         </nav>
     </header>
 
 
     <section class="hero-padre">
-        <h2>¡Hola! Soy</h2>
+        <h2 id="hola">¡Hola! Soy</h2>
         <h1>Elsa Mlot</h1>
         <p>Desarrolladora, curiosa y fan de superar retos.</p>
-        <button class="button-color">LO QUE HAGO</button>
+        <a class="button-loque" href="#mis-proyectos">LO QUE HAGO</a>
         <img src="imagenes/ginger-cat-722.png" alt="">
     </section>
 
     <section class="conocimientos">
-        <h2>Mis conocimientos</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio suscipit, eius veniam autem laboriosam sequi
-            vero earum quidem debitis ratione.</p>
-        <ul>
-            <li>HTML 5</li>
+        <div>
+            <h2 id="mis-conocimientos">Mis conocimientos</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio suscipit, eius veniam autem laboriosam
+                sequi
+                vero earum quidem debitis ratione Lorem, ipsum dolor.</p>
+        </div>
+
+        <ul class="padre-lenguajes">
+            <li>
+                <i class="devicon-- de colores"> </i>
+                <p>HTML 5</p>
+            </li>
             <li>CSS 3</li>
             <li>SASS</li>
             <li>javaScript</li>
@@ -45,59 +59,78 @@
     </section>
 
     <section class="frase">
-        <!-- before -->
+
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet perferendis voluptate animi ullam
             accusantium natus nam quo necessitatibus non dolorum et facilis dolore odit dolores, tempore culpa enim
-            mollitia?</p>
+            mollitia? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quibusdam consequatur,
+            nostrum dicta architecto reiciendis optio rerum culpa mollitia quo, fugiat molestias saepe, praesentium
+            tenetur ab rem? Impedit, officiis? Perspiciatis eligendi, in dolorem id officia asperiores tempore sunt,
+            iure soluta at repudiandae totam, qui doloremque!</p>
         <h2>someone</h2>
     </section>
 
     <section class="proyectos">
-        <h2>Mis proyectos</h2>
-        <ul>
-            <li>Todos</li>
+        <h2 id="mis-proyectos">Mis proyectos</h2>
+        <ul class="nav-proyectos">
+            <li class="all">Todos</li>
             <li>HTML/CSS</li>
             <li>javaScript</li>
             <li>React</li>
         </ul>
-        <ul>
-            <li>Portfolio</li>
-            <li>Tienda</li>
-            <li>Juegos de la memoria</li>
-            <li>Controlador de gastos</li>
-            <li>Administrador de reuiones</li>
-            <li>
+        <ul class="links-proyectos">
+            <li class="tarjeta">Portfolio</li>
+
+            <li class="tarjeta">Tienda</li>
+
+            <li class="tarjeta">Juegos de la memoria</li>
+
+            <li v>Controlador de gastos</li>
+
+            <li class="tarjeta">Administrador de reuiones</li>
+
+            <li class="tarjeta">
                 todo app
             </li>
-            <li>Buscador de peliculas</li>
+
+            <li class="tarjeta" .t>Buscador de peliculas</li>
+
         </ul>
 
 
 
     </section>
 
-   
+
     <footer>
         <div class="contenedor-footer">
-            <nav class="oculto-movil">
-            <ul>
-                <li>HOLA</li>
-                <li>CONOCIMIENTOS</li>
-                <li>PROYECTOS</li>
-                <li>CONTACTO</li>
-            </ul>
-        </nav>
-        <nav class="redes-sociales">
-            <ul>
-                <li>twitter</li>
-                <li>github</li>
-                <li>linked</li>
-                <li>mail</li>
-            </ul>
-        </nav>
-        <p>Hecho con AMOR por Ada</p>
+            
+            <nav>
+                <ul class="menu-desktop-nav">
+                    <li>
+                        <a href="#hola">HOLA</a>
+                    </li>
+                    <li>
+                        <a href="#mis-conocimientos">CONOCIMIENTOS</a>
+                    </li>
+                    <li>
+                        <a href="#mis-proyectos">PROYECTOS</a>
+                    </li>
+                    <li>CONTACTO</li>
+                </ul>
+            </nav>
+
+
+            <nav>
+                <ul class="redes-sociales">
+                    <li>twitter</li>
+                    <li>github</li>
+                    <li>linked</li>
+                    <li>mail</li>
+                </ul>
+            </nav>
+            <p>Hecho con <span>foto corazon</span> por Ada</p>
         </div>
-        
+
 
     </footer>
 
