agregue readme falta escribir, modifique colores y mas flex

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
  <!-- SECCION HERO -->
 
 
-    <section class="hero-padre">
+    <section class="hero-padre" id="hola">
         <div class="hero-texto">
-            <h2 id="hola">¡Hola! Soy</h2>
+            <h2 >¡Hola! Soy</h2>
             <h1>Elsa Mlot</h1>
-            <p>Desarrolladora en desarrolo, curiosa y fan de superar retos.</p>
+            <p>Desarrolladora en desarrollo, curiosa y fan de superar retos.</p>
             <a class="button-loque" href="#mis-proyectos">LO QUE HAGO</a>
         </div>
         <div class="imagen-hero">
@@ -133,7 +133,7 @@
     <section class="proyectos-padre">
         <h2 id="mis-proyectos">Mis proyectos</h2>
 
-        <div class="proyectos">
+        <div class="proyectos'nav">
             <button type="button" 
             class="button-all">Todos</button>
             <button type="button" class="button-langs">HTML/CSS</buton>
@@ -141,6 +141,10 @@
             <button type="button" class="button-langs">React</button>
         </div>
       
+
+
+
+
         
         <ul class="links-proyectos">
             <li class="tarjeta-proyectos">
@@ -194,7 +198,9 @@
                     <li>
                         <a href="#mis-proyectos">PROYECTOS</a>
                     </li>
-                    <li>CONTACTO</li>
+                    <li>
+                        <a href="#contacto">CONTACTO</a>
+                        </li>
                 </ul>
             </nav>
 
